--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
         </ul>
       </nav>
       <h1 class="header__title">no focus</h1>
-      <p class="text-decor"> 
-        Что делать, когда не можешь делать ничего <br> Или почему нам так сложно сконцентрироваться, особенно когда очень надо</br>
+      <p class="text-decor">Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</br>
       </p>
       <span class="decor-border-bottom" aria-hidden="true"></span>
     </header>
     <main>
-      <article class="content__section-why">
+      <section class="content__section-why">
       <h2 class="content__section-title">Почему сосредоточиться так сложно</h2>
       <h3 class="content__text-title">Многозадачность</h3>
       <p class="content__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="#">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
@@ -61,8 +60,8 @@
       <h3 class="content__text-title">Дофамин</h3>
       <p class="content__text">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
       </p>
-      </article>
-      <article class="content__section-what">
+      </section>
+      <section class="content__section-what">
       <h2 class="content__section-title">Что снижает концентрацию внимания?</h2>
       <h3 class="content__text-title">Многозадачность</h3>
       <p class="content__text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.
@@ -73,8 +72,8 @@
       <h3 class="content__text-title">Гаджеты</h3>
       <p class="content__text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.
       </p>
-      </article>
-      <article class="content__section-how">
+      </section>
+      <section class="content__section-how">
       <h2 class="content__section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
       <h3 class="content__text-title">5 простых (на самом деле не очень) советов</h3>
       <h4 class="content__text-accent">Представьте небо и облака</h4>
@@ -92,15 +91,15 @@
       <h4 class="content__text-accent">Читайте</h4>
       <p class="content__text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
       </p>
-      </article>
-      <article class="gallery">
+      </section>
+      <section class="gallery">
       <h3 class="content__text-title">А можно в картинках?</h3>
       <img class="image image__sunset" src="./images/sunset.png" alt="Картинка рассвета в розовых тонах" loading="lazy">
       <img class="image image__ice-creame" src="./images/ice-cream.png" alt="Картинка мороженого" loading="lazy">
       <img class="image image__tape" src="./images/tape.png" alt="Картинка аудиокассеты" loading="lazy">
       <img class="image image__book" src="./images/books.png" alt="Картинка стопки книг" loading="lazy">
       <img class="image image__street" src="./images/street.png" alt="Картинка улицы" loading="lazy">
-      </article>
+      </section>
     </main>
     <footer class="footer">
       <span class="decor-border-top" aria-hidden="true"></span>
