добавлен медиа в светлую тему

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </ul>
       </nav>
       <h1 class="header__title">no focus</h1>
-      <p class="text-decor">Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</br>
+      <p class="text-decor">Что делать, когда не можешь делать ничего<br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
       <span class="decor-border-bottom" aria-hidden="true"></span>
     </header>
