--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main class="content">
       <section class="section content__section-why">
       <h3 class="content__section-title">Почему сосредоточиться так сложно</h3>
-      <div class="section-right"> <!--доп.обертка для корректного поведения при добавлении новых карточек-->
+      <div class="section-article"> <!--доп.обертка для корректного поведения при добавлении новых карточек-->
       <article class="article">
         <h4 class="content__text-title">Многозадачность</h4>
         <p class="content__text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи 
@@ -89,7 +89,7 @@
       </section>
       <section class="section content__section-how">
         <h3 class="content__section-title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
-        <div class="section-right"> <!--доп.обертка для корректного поведения при добавлении карточек-->
+        <div class="section-article"> <!--доп.обертка для корректного поведения при добавлении карточек-->
         <h4 class="content__text-title">5 простых (на самом деле не очень) советов</h4>
         <article class="article">
           <h5 class="content__text-accent">Представьте небо и облака</h5>
@@ -120,7 +120,7 @@
         </div>
       </section>
       <section class="gallery">
-          <h4 class="content__text-title">А можно в картинках?</h4>
+          <h2 class="content__text-title">А можно в картинках?</h2>
           <img class="image image__sunset" src="./images/sunset.png" alt="Картинка рассвета в розовых тонах" loading="lazy">
           <img class="image image__ice-creame" src="./images/ice-cream.png" alt="Картинка мороженого" loading="lazy">
           <img class="image image__tape" src="./images/tape.png" alt="Картинка аудиокассеты" loading="lazy">
@@ -129,9 +129,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <div class="decor-border-top" aria-hidden="true"></div>
       <h2 class="footer__title">focus</h2>
-      <div class="decor-border-bottom" aria-hidden="true"></div>
     </footer>
   </body>
 </html>
